--- a/index.html
+++ b/index.html
@@ -10,190 +10,190 @@
 </head>
 <body>
 
-  <section class="section section_search" id="search-block">
-    <div class="search-close" id="search-toggler-close"></div>
-    <div class="container">
-      <div class="search-content">
-        <form action="#" method="get" class="search-form">
-          <input class="search-form__input" type="search" name="search" id="search" placeholder="Type your request...">
-          <button class="search-form__btn" type="submit" name="button">
-            <img class="search-form__logo" src="img/logos/search.png" alt="">
-          </button>
-        </form>
-      </div>
-    </div>
+  <div class="search-overlay"></div>
+
+  <section class="search padding-100-0">
+
+    <h2 class="search__title">Search form</h2>
+
+    <button type="button" class="search__close btn btn--close" aria-label="close search block"></button>
+
+    <form action="#" method="get" class="search__form container">
+      <input class="search__form-input" type="search" name="search" placeholder="Type your request...">
+      <button class="search__form-btn" type="submit" name="button" aria-label="start search">
+        <img class="search__form-logo" src="img/logos/search.png" alt="search">
+      </button>
+    </form>
+
   </section>
 
-  <section class="section section_main">
+  <section class="section-main">
+
+    <h1 class="section-main__title">Buy furniture on Amado</h1>
+
+    <div class="header-overlay"></div>
 
     <div class="mobile-nav">
-      <div class="nav-logo">
-        <a href="#" class="nav-logo__link">
-          <img src="img/logos/logo.png" alt="" class="nav-logo__img">
+      <div class="mobile-nav__logo">
+        <a href="index.html" class="mobile-nav__logo-link">
+          <img src="img/logos/logo.png" alt="" class="mobile-nav__logo-img">
         </a>
       </div>
 
-      <div class="nav-toggler" id="nav-toggler">
-        <span class="nav-toggler__item">Menu</span>
+      <div class="mobile-nav__toggler">
+        <span class="mobile-nav__toggler-item">Menu</span>
       </div>
     </div>
     <!-- mobile-nav -->
 
-    <header class="header" id="header">
-      <div class="nav-close" id="nav-toggler-close"></div>
+    <header class="header">
 
-      <div class="header-logo">
-        <a href="" class="header-logo__link">
-          <img src="img/logos/logo.png" alt="" class="header-logo__img">
+      <button type="button" class="header__close btn btn--close" aria-label="close mobile navigation"></button>
+
+      <div class="header__logo">
+        <a href="index.html" class="header__logo-link">
+          <img src="img/logos/logo.png" alt="" class="header__logo-img">
         </a>
       </div>
 
-      <nav class="main-nav">
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a href="" class="main-nav__link active">Home</a>
+      <nav class="header__nav">
+        <ul class="nav">
+          <li class="nav__item">
+            <a href="#" class="nav__link nav__link--header active">Home</a>
           </li>
-          <li class="main-nav__item">
-            <a href="" class="main-nav__link">Shop</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link nav__link--header">Shop</a>
           </li>
-          <li class="main-nav__item">
-            <a href="" class="main-nav__link">Product</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link nav__link--header">Product</a>
           </li>
-          <li class="main-nav__item">
-            <a href="" class="main-nav__link">Cart</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link nav__link--header">Cart</a>
           </li>
-          <li class="main-nav__item">
-            <a href="" class="main-nav__link">Checkout</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link nav__link--header">Checkout</a>
           </li>
         </ul>
       </nav>
 
-      <div class="nav-buttons">
-        <button class="btn btn_nav" type="button" name="button">%Discount%</button>
-        <button class="btn btn_nav btn_black" type="button" name="button">New this week</button>
+      <div class="header__buttons">
+        <button class="btn header__buttons-item" type="button" name="button" aria-label="Get discount">%Discount%</button>
+        <button class="btn header__buttons-item btn_black" type="button" name="button" aria-label="See new products">New this week</button>
       </div>
 
-      <div class="client-block">
-        <a href="" class="client-block__link">
-          <img src="img/logos/cart.png" alt="" class="client-block__img">
+      <div class="header__client">
+        <a href="#" class="header__client-link">
+          <img src="img/logos/cart.png" alt="" class="header__client-img">
           Cart
-          <span class="item-counter">(0)</span>
+          <span class="header__client-counter">(0)</span>
         </a>
-        <a href="" class="client-block__link">
-          <img src="img/logos/favorites.png" alt="" class="client-block__img">
+        <a href="#" class="header__client-link">
+          <img src="img/logos/favorites.png" alt="" class="header__client-img">
           Favorite
         </a>
-        <a href="" class="client-block__link" id="search-link">
-          <img src="img/logos/search.png" alt="" class="client-block__img">
+        <a href="#" class="header__client-link" id="searchLink">
+          <img src="img/logos/search.png" alt="" class="header__client-img">
           Search
         </a>
       </div>
 
-      <div class="social-block">
-        <a href="" class="social-block__item pinterest">
-          <i class="social-block__logo"></i>
-        </a>
-        <a href="" class="social-block__item instagram">
-          <i class="social-block__logo"></i>
-        </a>
-        <a href="" class="social-block__item facebook">
-          <i class="social-block__logo"></i>
-        </a>
-        <a href="" class="social-block__item tweeter">
-          <i class="social-block__logo"></i>
-        </a>
+      <div class="header__social">
+        <a href="#" class="header__social-item pinterest"></a>
+        <a href="#" class="header__social-item instagram"></a>
+        <a href="#" class="header__social-item facebook"></a>
+        <a href="#" class="header__social-item twitter"></a>
       </div>
 
     </header>
 
-    <div class="products-main" id="products-block">
+    <div class="products-main">
 
-      <div class="product-block" id="prod1">
-        <a href="" class="product-block__link">
-          <img src="img/bg/1.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $180</p>
-            <h4 class="product-block__name">Modern chair</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/1.jpg" alt="chair" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $180</p>
+            <h4 class="products-main__block-name">Modern chair</h4>
           </div>
         </a>
       </div>
 
-      <div class="product-block" id="prod2">
-        <a href="" class="product-block__link">
-          <img src="img/bg/2.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $180</p>
-            <h4 class="product-block__name">Minimalistic plant pot</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/2.jpg" alt="plant pot" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $180</p>
+            <h4 class="products-main__block-name">Minimalistic plant pot</h4>
           </div>
         </a>
       </div>
 
-      <div class="product-block" id="prod3">
-        <a href="" class="product-block__link">
-          <img src="img/bg/3.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $180</p>
-            <h4 class="product-block__name">Modern chair</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/3.jpg" alt="chair" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $180</p>
+            <h4 class="products-main__block-name">Modern chair</h4>
           </div>
         </a>
       </div>
 
-      <div class="product-block" id="prod4">
-        <a href="" class="product-block__link">
-          <img src="img/bg/4.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $180</p>
-            <h4 class="product-block__name">Night stand</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/4.jpg" alt="night stand" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $180</p>
+            <h4 class="products-main__block-name">Night stand</h4>
           </div>
         </a>
       </div>
 
-      <div class="product-block" id="prod5">
-        <a href="" class="product-block__link">
-          <img src="img/bg/5.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $18</p>
-            <h4 class="product-block__name">Plant potr</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/5.jpg" alt="plant pot" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $18</p>
+            <h4 class="products-main__block-name">Plant pot</h4>
           </div>
         </a>
       </div>
 
-      <div class="product-block" id="prod6">
-        <a href="" class="product-block__link">
-          <img src="img/bg/6.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $320</p>
-            <h4 class="product-block__name">Smal table</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/6.jpg" alt="small table" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $320</p>
+            <h4 class="products-main__block-name">Small table</h4>
           </div>
         </a>
       </div>
 
-      <div class="product-block" id="prod7">
-        <a href="" class="product-block__link">
-          <img src="img/bg/7.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $318</p>
-            <h4 class="product-block__name">Metalic chair</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/7.jpg" alt="metal chair" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $318</p>
+            <h4 class="products-main__block-name">Metalic chair</h4>
           </div>
         </a>
       </div>
 
-      <div class="product-block" id="prod8">
-        <a href="" class="product-block__link">
-          <img src="img/bg/8.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $318</p>
-            <h4 class="product-block__name">Modern rocking chair</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/8.jpg" alt="rocking chair" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $318</p>
+            <h4 class="products-main__block-name">Modern rocking chair</h4>
           </div>
         </a>
       </div>
 
-      <div class="product-block" id="prod9">
-        <a href="" class="product-block__link">
-          <img src="img/bg/9.jpg" alt="" class="product-block__img">
-          <div class="product-block__info">
-            <p class="product-block__price">From $318</p>
-            <h4 class="product-block__name">Home deco</h4>
+      <div class="products-main__block">
+        <a href="#" class="products-main__block-link">
+          <img src="img/bg/9.jpg" alt="deco" class="products-main__block-img">
+          <div class="products-main__block-info">
+            <p class="products-main__block-price">From $318</p>
+            <h4 class="products-main__block-name">Home deco</h4>
           </div>
         </a>
       </div>
@@ -201,80 +201,84 @@
     </div>    <!-- products-main -->
   </section>
 
-  <section class="section section_newsteller">
-    <div class="container">
 
-      <div class="newsteller">
 
-        <div class="newsteller-info">
-          <h5 class="newsteller-info__header">
+<!-- newsteller -->
+  <section class="padding-100-0 newsteller">
+
+      <div class="newsteller-inner container">
+
+        <div class="newsteller-inner__info">
+          <h5 class="newsteller-inner__info-title">
             Subscribe for a
-            <spann class="newsteller-info__header_orange">
+            <span class="newsteller-inner__info-header--orange">
               25% Discount
             </span>
           </h5>
-          <p class="newsteller-info__text">Nulla ac convallis lorem, eget euismod nisl. Donec in libero sit amet mi vulputate consectetur. Donec auctor interdum purus, ac finibus massa bibendum nec.</p>
+          <p class="newsteller-inner__info-text">Nulla ac convallis lorem, eget euismod nisl. Donec in libero sit amet mi vulputate consectetur. Donec auctor interdum purus, ac finibus massa bibendum nec.</p>
         </div>
 
-        <div class="newsteller-form">
-          <form action="#" method="post" class="form-block">
-            <input type="email" name="e-mail" placeholder="Your E-mail" class="form-block__input">
-            <button class="btn form-block__btn" type="button" name="button">Subscribe</button>
-          </form>
-        </div>
+        <form action="#" method="post" class="newsteller-inner__form">
+          <input type="email" name="e-mail" placeholder="Your E-mail" class="newsteller-inner__form-input">
+          <button class="newsteller-inner__form-btn btn" type="button" name="button">Subscribe</button>
+        </form>
 
       </div>
 
-    </div>
   </section>
+<!-- end of newsteller -->
 
-  <footer class="section section_footer">
-    <div class="container">
 
-      <div class="footer">
 
-        <div class="footer-info">
-          <a href="" class="footer-info__link">
-            <img src="img/logos/logo2.png" alt="" class="footer-info__img">
+<!-- footer -->
+  <footer class="footer padding-100-0">
+
+      <div class="footer-inner container">
+
+        <div class="footer-inner__info">
+          <a href="index.html" class="footer-inner__info-link">
+            <img src="img/logos/logo2.png" alt="logo" class="footer-inner__info-img">
           </a>
-          <p class="footer-info__text">Copyright 2020 All rights reserved | This template is made by Colorib</p>
+          <p class="footer-inner__info-about">Copyright 2020 All rights reserved | This template is made by Colorib</p>
         </div>
 
-        <nav class="footer-nav">
-          <button class=" btn footer-nav__toggler" id="footer-nav-toggler">
-            <i class=""></i>
+        <nav class="footer-inner__nav">
+          <button type="button" class="footer-inner__nav-toggler btn" aria-label="open/close footer nav">
+            <span class="footer-inner__nav-arrow"></span>
           </button>
 
-          <ul class="footer-nav__list" id="footer-nav">
-            <li class="footer-nav__item">
-              <a href="" class="footer-nav__link active">Home</a>
+          <ul class="nav--footer nav">
+            <li class="nav__item">
+              <a href="#" class="nav__link nav__link--footer">Home</a>
             </li>
-            <li class="footer-nav__item">
-              <a href="" class="footer-nav__link">Shop</a>
+            <li class="nav__item">
+              <a href="#" class="nav__link nav__link--footer">Shop</a>
             </li>
-            <li class="footer-nav__item">
-              <a href="" class="footer-nav__link">Product</a>
+            <li class="nav__item">
+              <a href="#" class="nav__link nav__link--footer">Product</a>
             </li>
-            <li class="footer-nav__item">
-              <a href="" class="footer-nav__link">Cart</a>
+            <li class="nav__item">
+              <a href="#" class="nav__link nav__link--footer">Cart</a>
             </li>
-            <li class="footer-nav__item">
-              <a href="" class="footer-nav__link">Checkout</a>
+            <li class="nav__item">
+              <a href="#" class="nav__link nav__link--footer">Checkout</a>
             </li>
           </ul>
         </nav>
 
       </div>
 
-    </div>
   </footer>
 
-  <a href="" class="scroll-up" id="scroll-up"><i></i></a>
+  <a href="" class="scroll-up">
+    <span class="scroll-up__item"></span>
+  </a>
 
-  <script src="js/nav-show.js" charset="utf-8"></script>
-  <script src="js/search-show.js" charset="utf-8"></script>
-  <script src="js/scroll-up.js" charset="utf-8"></script>
-  <!-- <script src="js/products-position.js" charset="utf-8"></script> -->
+
+  <script src="js/masonry/masonry.pkgd.min.js"></script>
+  <script src="js/masonry/initialize-mansory.js"></script>
+  <script src="js/nav-options.js"></script>
+  <script src="js/scroll-up.js"></script>
 
 </body>
 </html>
